[package]
name = "rgraphparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
indicatif = {version = "0.16.0", features = ["rayon"]}
memmap = "0.7.0"
neo4rs = { git = "https://github.com/Nuckal777/neo4rs" }
rayon = "1.5.2"
roxmltree = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.17.0"
tokio-stream = "0.1.8"
xxhash-rust = { version = "0.8.0", default-features = false, features = ["xxh3"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
