[package]
name = "netex-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
geo = "0.28"
indicatif = {version = "0.17.0", features = ["rayon"]}
memmap = "0.7.0"
rayon = "1.9"
roxmltree = "0.19"
rstar = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
